# hop-sdk-elixir

./: .gitignore  .mise.toml  CHANGELOG.md  README.md  mix.exs
.github/workflows/: release.yml  sync-back.yml
examples/: client.exs  discovery.exs  echo.exs  raw_roundtrip.exs  server.exs  tcp.exs
lib/hop/: dev_tls.ex  discovery.ex  endpoint.ex  native.ex  tcp_bearer.ex  wss_bearer.ex
native/: Cargo.toml
native/hop_endpoint/: Cargo.toml
native/hop_endpoint/src/: lib.rs
test/: discovery_test.exs  hop_endpoint_test.exs  wss_security_test.exs
